@@ -4,16 +4,25 @@ import com.fiap_g14.foodlink.api.domain.UserEntity;
 import com.fiap_g14.foodlink.api.dto.CreateUserRequestDTO;
 import com.fiap_g14.foodlink.api.dto.ChangePasswordRequestDTO;
 import com.fiap_g14.foodlink.api.dto.UserResponseDTO;
+import com.fiap_g14.foodlink.api.dto.PageResponseDTO;
 import com.fiap_g14.foodlink.api.exception.DataAlreadyExistsException;
 import com.fiap_g14.foodlink.api.mapper.UserMapper;
 import com.fiap_g14.foodlink.api.repository.UserRepository;
 import com.fiap_g14.foodlink.api.validator.UserValidator;
 import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Sort;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.jpa.domain.Specification;
+import com.fiap_g14.foodlink.api.repository.UserSpecification;
+
 import java.util.Optional;
 import java.util.UUID;
 
@@ -25,8 +34,24 @@ public class UserService {
     private final UserValidator userValidator;
     private final BCryptPasswordEncoder passwordEncoder;
 
-    public List<UserResponseDTO> getAllUsers() {
-        return userRepository.findAll().stream().map(UserMapper::toDTO).toList();
+    public PageResponseDTO getUsers(Integer pageActual, Integer size, String name) {
+
+        userValidator.validatePagination(pageActual, size);
+
+        Pageable pageable = PageRequest.of(pageActual, size, Sort.by("nome"));
+
+        Specification<UserEntity> spec = UserSpecification.nomeLike(name);
+        Page<UserEntity> page = userRepository.findAll(spec, pageable);
+
+        List<UserResponseDTO> content = page.getContent().stream().map(UserMapper::toDTO).collect(Collectors.toList());
+
+        return PageResponseDTO.builder()
+                .content(content)
+                .page(page.getNumber())
+                .size(page.getSize())
+                .totalElements(page.getTotalElements())
+                .totalPages(page.getTotalPages())
+                .build();
     }
 
     public UserResponseDTO createUser(CreateUserRequestDTO userRequestDTO) {
